--- a/Kendo/index.html
+++ b/Kendo/index.html
@@ -26,6 +26,9 @@
         
         <div data-role="footer">
             <div data-role="tabstrip">
+                <button>
+                    TEST BUTTON
+                </button>
                 <a href="views/home.html" data-icon="home">Home</a>   
                 <a href="views/settings.html" data-icon="settings">Settings</a>
                 <a href="views/contacts.html" data-icon="settings">Contacts</a>
