--- a/Kendo/index.html
+++ b/Kendo/index.html
@@ -24,6 +24,7 @@
 
         <!-- application views will be rendered here -->
         
+        <!-- promqna views will be rendered here -->
         <div data-role="footer">
             <div data-role="tabstrip">
                 <button>
