--- a/Kendo/index.html
+++ b/Kendo/index.html
@@ -28,7 +28,7 @@
         <div data-role="footer">
             <div data-role="tabstrip">
                 <button>
-                    TEST BUTTON
+                    TEST BUTTON 123
                 </button>
                 <a href="views/home.html" data-icon="home">Home</a>   
                 <a href="views/settings.html" data-icon="settings">Settings</a>
